(fix): remove the clipping

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -13,7 +13,7 @@
 .watermark-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     opacity: 0.75;
 }
 
